Project

General

Profile

Actions

Bug #21534

closed

Incomplete/missing get_store_prefixes implementations in OSDMonitor/MDSMonitor

Added by John Spray over 6 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Based on comments from https://github.com/ceph/ceph/pull/17929#issuecomment-331768992 -- it looks like we should have been updating get_store_prefixes in order for newly-joined mons to work properly, but we weren't.


Related issues 1 (0 open1 closed)

Copied to Ceph - Backport #21645: luminous: Incomplete/missing get_store_prefixes implementations in OSDMonitor/MDSMonitorResolvedKefu ChaiActions
Actions #1

Updated by John Spray over 6 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Kefu Chai over 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #21645: luminous: Incomplete/missing get_store_prefixes implementations in OSDMonitor/MDSMonitor added
Actions #4

Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF