mon/OSDMonitor: tidy prefix definitions

We should define them in one place to make it easy
when updating get_store_prefixes.

Fixes: http://tracker.ceph.com/issues/21534
Signed-off-by: John Spray <john.spray@redhat.com>
(cherry picked from commit 889ac5166ad8fd30678325ddc2da59f45db53f06)
(cherry picked from commit de07d2954afb012e51d2eaca12c1763e29a19eca)
Signed-off-by: Joao Eduardo Luis <joao@suse.de>
(cherry picked from commit b29549799f4e701a017cb4f8025297b04292eecf)